--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/platform-server": "2.0.0",
     "@angular/router": "3.0.0",
+    "email-validator": "^1.0.7",
     "nativescript-angular": "1.0.0",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
