--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Groceries",
+  "name": "Todos",
   "version": "1.0.0",
-  "description": "A NativeScript-built iOS and Android app for managing grocery lists",
+  "description": "A NativeScript-built iOS and Android app for managing todos lists",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nativescript/sample-Groceries.git"
+    "url": ""
   },
   "keywords": [
     "NativeScript"
@@ -12,11 +12,11 @@
   "author": "TJ VanToll <tj.vantoll@gmail.com> (http://tjvantoll.com/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nativescript/sample-Groceries/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/nativescript/sample-Groceries/groceries",
+  "homepage": "",
   "nativescript": {
-    "id": "org.nativescript.groceries",
+    "id": "org.nativescript.todos",
     "tns-ios": {
       "version": "2.3.0"
     },
